# random-gradient-generator

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
src/: lib.rs
