[package]
name = "random_gradient_generator-cli"
version = "1.0.0"
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
random_gradient_generator = { path = ".." }
rand = "0"
[dependencies.clap]
version = "4"
features = ["derive", "wrap_help"]
